kubernetes-demo/sample_service/HelloKubernetes/kubernetes/helloKubernetesService/helloKubernetesService_deployment.yaml
# Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "helloKubernetesService"
  name: "kubernetes-hello-v1"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "helloKubernetesService"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: "index.docker.io/wso2am/kubernetes-hello:v1"
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 9090
        name: "kubernetes-hello-v1"
        ports:
        - containerPort: 9090
          protocol: "TCP"
        volumeMounts: []
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes: []
