kubernetes-demo/sample_service/HelloKubernetes/kubernetes/helloKubernetesService/helloKubernetesService_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "helloKubernetesService"
  name: "kubernetes-hello-v1"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "helloKubernetesService"
  type: "ClusterIP"
